--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
 }
@@ -56,6 +56,7 @@ section {
   transform: translateY(-100%) scale(0);
   transition: all 0.4s ease-in-out;
   background: linear-gradient(0deg, var(--gradient-primary) 0%, var(--gradient-secondary) 100%);
+  overflow: auto;
 }
 
 .active {
@@ -140,8 +141,10 @@ section {
   transition: all 0.4s ease-in-out;
 }
 .header-content .image img {
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.4s ease-in-out;
 }
 .header-content .right-header {
@@ -154,7 +157,7 @@ section {
   font-size: 3rem;
 }
 .header-content .right-header .name span {
-  color: var(--color-mauve);
+  color: var(--color-secondary);
 }
 .header-content .right-header p {
   margin: 1.5rem 0;
